tests/ui/rfcs/rfc-2497-if-let-chains/avoid-invalid-mir.rs
// Regression test for #104172

const N: usize = {
    struct U;
    !let y = 42;
    //~^ ERROR expected expression, found `let` statement
    3
};

struct S {
    x: [(); N]
}

fn main() {}
